--- a/frontend/components/header/header.module.css
+++ b/frontend/components/header/header.module.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   height: 4rem;
-  width: auto;
+  width: calc(100vw - 17px);
 }
 
 .header img {
