--- a/frontend/components/list view/listview.module.css
+++ b/frontend/components/list view/listview.module.css
@@ -5,14 +5,14 @@
   height: 85vh;
   margin-left: 3.5rem;
   align-self: center;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 .hex {
   width: 25%;
   height: 25%;
   box-sizing: border-box;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -48,5 +48,5 @@
   align-items: center;
   font-family: 'Source Serif Pro';
   font-size: 2.5rem;
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
 }
