Adds Copy to clipboard functionality and notification

--- a/frontend/components/detail view/detailview.module.css
+++ b/frontend/components/detail view/detailview.module.css
@@ -35,9 +35,9 @@
   font-size: 1.5rem;
 }
 
-/* .mainView button:hover {
+.mainView button:hover {
   cursor: pointer;
-} */
+}
 
 /* 
   Below this poit is just the lower icons
